// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsUsageModal should match a snapshot 1`] = `
<Component>
  <AnalyticsUsageModal
    handleClose={[MockFunction]}
    visible={true}
  >
    <Component
      afterClose={[MockFunction]}
      title="Data Warehouse Usage Cap"
      visible={true}
    />
  </AnalyticsUsageModal>
</Component>
`;

exports[`NewUsageComponent should match a snapshot for a non-updated usage 1`] = `
<Component
  currentSettings={
    Object {
      "monthlyUsageCap": 5,
    }
  }
/>
`;

exports[`NewUsageComponent should match a snapshot for an updated usage 1`] = `
<Component
  currentSettings={
    Object {
      "monthlyUsageCap": 2,
    }
  }
>
  <p>
    Setting your usage cap to 
    5
     hours will cap maximum monthly charges at 
    £20.97
  </p>
</Component>
`;
